# iamarmor

./: .pre-commit-hooks.yaml  CHANGELOG.md  DECISIONS.md  LICENSE  README.md  STARTER_RULES.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: DOGFOODING.md  config.md  demo.tape  json-output.md  pre-commit.md  release.md
src/: pyproject.toml
src/iamarmor/: __init__.py  exceptions.py  parser.py  resources.py
src/iamarmor/cli/: __init__.py  config.py  main.py  reporters.py
src/iamarmor/rules/: __init__.py  checks.py  default_pack.yml  engine.py  loader.py  models.py  registry.py
tests/: test_cli.py  test_config.py  test_default_rules.py  test_engine.py  test_loader.py  test_parser.py  test_reporters.py  test_resources.py
tests/fixtures/: assume_role.tf  invalid_hcl.tf  no_iam_resources.tf  policy_attachment.tf  policy_document_data.tf  role_with_inline_policy.tf  simple_policy.tf  wildcard_action.tf
tests/fixtures/config/: .iamarmor.yml
tests/fixtures/config/bad_config/: .iamarmor.yml
tests/fixtures/rules/IAM001_action_wildcard/: fail.tf  pass.tf
tests/fixtures/rules/IAM002_resource_wildcard_sensitive/: fail.tf  pass.tf
tests/fixtures/rules/IAM003_no_inline_policies/: fail.tf  pass.tf
tests/fixtures/rules/IAM004_role_max_session_duration/: fail.tf  pass.tf
tests/fixtures/rules/IAM005_passrole_resource_wildcard/: fail.tf  pass.tf
tests/fixtures/rules/IAM006_principal_wildcard/: fail.tf  pass.tf
tests/fixtures/rules/IAM007_assume_role_concrete_principal/: fail.tf  pass.tf
tests/fixtures/rules/IAM008_not_action/: fail.tf  pass.tf
tests/fixtures/rules/IAM009_not_resource/: fail.tf  pass.tf
tests/fixtures/rules/IAM010_no_admin_managed_policy/: fail.tf  pass.tf
