[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iamarmor"
version = "0.1.0"
description = "IAM Policy Analyzer & Fixer"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "LLM Armor", email = "hello@iamarmor.dev"},
]
dependencies = [
    "python-hcl2>=4.3",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.1"]

[project.scripts]
iamarmor = "iamarmor.cli.main:app"

[project.urls]
Repository = "https://github.com/iam-armor/iamarmor"
Issues = "https://github.com/iam-armor/iamarmor/issues"
Changelog = "https://github.com/iam-armor/iamarmor/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/iamarmor"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
